# ayn-ml

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: backport-to-monorepo.yml  docs.yml  notebooks.yml
advisor/: index.html
api/: index.html
api/advisor/: index.html
api/core/: index.html
api/data/: index.html
api/metrics/: index.html
api/renderers/: index.html
api/runner/: index.html
api/sinks/: index.html
api/stores/: index.html
architecture/: index.html
ayn_ml/: __init__.py  exceptions.py  runner.py
ayn_ml/advisor/: __init__.py  _analysis.py  _plan.py  _rules.py  advisor.py
ayn_ml/core/: __init__.py  alert.py  data_selection.py  result.py  schema.py  spec.py
ayn_ml/data/: __init__.py  csv.py  excel.py  partitioner.py  sampling.py  source.py
ayn_ml/io/: __init__.py  plan_parser.py
ayn_ml/metrics/: __init__.py  base.py  recsys.py  recsys_utils.py  registry.py
ayn_ml/metrics/tabular/: __init__.py  _helpers.py  drift.py  estimation.py  fairness.py  performance.py  profiler.py  statistics.py  tests.py
ayn_ml/renderers/: __init__.py  base.py  html.py  no_chart.py  plotly.py
ayn_ml/sinks/: __init__.py  base.py  dataframe.py  email.py  json_sink.py  webhook.py
ayn_ml/stores/: __init__.py  _helpers.py  base.py  memory.py  sqlite.py
data-layer/: index.html
docs/: advisor.md  architecture.md  data-layer.md  explain.md  index.md  metrics.md  pro.md  quickstart.md  runner.md  schemas.md  sinks.md  stores.md
docs/api/: advisor.md  core.md  data.md  index.md  metrics.md  renderers.md  runner.md  sinks.md  stores.md
docs/stylesheets/: extra.css
examples/: 01_core_and_data_layer.ipynb  02_metrics.ipynb  03_cbpe.ipynb  04_fairness.ipynb  05_recsys_metrics.ipynb  06_runner_and_profiling.ipynb  07_stores.ipynb  08_renderers_and_alerts.ipynb  09_advisor.ipynb  README.md
explain/: index.html
metrics/: index.html
pro/: index.html
quickstart/: index.html
runner/: index.html
schemas/: index.html
search/: search_index.json
sinks/: index.html
stores/: index.html
tests/: conftest.py  test_advisor.py  test_alert.py  test_cbpe.py  test_core_result.py  test_core_schema.py  test_core_spec.py  test_data_csv.py  test_data_excel.py  test_data_partitioner.py  test_data_sampling.py  test_data_source.py  test_exceptions.py  test_fairness.py  test_metrics_recsys.py  test_metrics_registry.py  test_metrics_tabular.py  test_profiler.py  test_recsys_utils.py  test_renderers.py  test_runner.py  test_sinks.py  test_stores.py  test_target_drift.py
