[project]
name = "ayn-ml"
version = "0.1.0"
description = "ML model monitoring library — performance, drift, and statistical metrics"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "narwhals>=1.0",
    "pydantic>=2.0",
    "scipy>=1.11",
    "numpy>=1.25",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "plotly>=5.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
polars = ["polars>=1.0", "pyarrow>=14.0"]
excel = ["openpyxl>=3.1", "fastexcel>=0.7"]
sql = ["sqlalchemy>=2.0"]
mlflow = ["mlflow>=2.0"]
nlp = ["evaluate>=0.4", "bert-score>=0.3"]
nlp-embeddings = ["sentence-transformers>=2.0"]
all = [
    "polars>=1.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "fastexcel>=0.7",
    "sqlalchemy>=2.0",
    "mlflow>=2.0",
    "evaluate>=0.4",
    "bert-score>=0.3",
    "sentence-transformers>=2.0",
]

[project.urls]
Homepage = "https://github.com/Kevek-ml/ayn-ml"

[tool.poetry]
name = "ayn-ml"
version = "0.1.0"
description = "ML model monitoring library — performance, drift, and statistical metrics"
authors = ["Kevek ML <p76sw2bm54@privaterelay.appleid.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Kevek-ml/ayn-ml"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
narwhals = ">=1.0"
pydantic = "^2.0"
scipy = "^1.11"
numpy = "^1.25"
pyyaml = "^6.0"
jinja2 = "^3.1"
plotly = "^5.0"
pandas = "^2.0"
polars = { version = "^1.0", optional = true }
pyarrow = { version = ">=14.0", optional = true }
scikit-learn = "^1.3"
sqlalchemy = { version = "^2.0", optional = true }
mlflow = { version = "^2.0", optional = true }
evaluate = { version = ">=0.4", optional = true }
bert-score = { version = ">=0.3", optional = true }
openpyxl = { version = ">=3.1", optional = true }
fastexcel = { version = ">=0.7", optional = true }
sentence-transformers = { version = ">=2.0", optional = true }

[tool.poetry.extras]
polars = ["polars"]
sklearn = ["scikit-learn"]
parquet = ["pyarrow"]
excel = ["openpyxl", "fastexcel"]
sql = ["sqlalchemy"]
mlflow = ["mlflow"]
nlp = ["evaluate", "bert-score"]
nlp-embeddings = ["sentence-transformers"]
all = [
  "polars",
  "openpyxl", "fastexcel",
  "sqlalchemy", "mlflow",
  "evaluate", "bert-score", "sentence-transformers",
]

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
ruff = "^0.8"
mypy = "^1.5"
pydoclint = ">=0.5"
pre-commit = "^3.0"
pandas = "^2.0"
polars = "^1.0"
scikit-learn = "^1.3"
matplotlib = ">=3.7"
nbconvert = ">=7.0"
ipykernel = ">=6.0"
mkdocs-material = ">=9.5"
mkdocstrings = {version = ">=0.25", extras = ["python"]}
pymdown-extensions = ">=10.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E402"]  # D: no docstrings required; E402: importorskip before project imports is intentional
"examples/*.ipynb" = ["D", "E402"]  # notebooks have non-linear imports by design

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false   # types live in signatures, not repeated in docstrings
check-return-types = false
check-class-attributes = false        # skips Pydantic model_config false positives
require-return-section-when-returning-nothing = false
should-document-magic-methods = false

[tool.mypy]
python_version = "3.10"
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.8",
]
